# Cellular-Automata-Simulator

./: .gitignore  LICENSE  README.md  gameoflife.py  pyproject.toml  video.py
gameoflife_ndimage/: __init__.py  simulation.py  video.py
src/gameoflife_ndimage/: __init__.py  simulation.py
tests/: test_2d.py  test_recording.py
